# compare-rust-go-zig

./: .gitignore  CLAUDE.md  PLAN.md  PLAN2.md  README.md  SUMMARY.md  WORKFLOW.md  clean.sh  plan.md  read.md  recheck.md
.claude/: README.md
automated-tor-tracker/: README.md
container-watchdog/: README.md
csv-stream-aggregator/: README.md
custom-bittorrent-client/: README.md
custom-log-masker/: README.md
dns-resolver/: README.md
high-perf-reverse-proxy/: README.md
high-perf-reverse-proxy/rust/: Cargo.toml  Dockerfile
high-perf-reverse-proxy/rust/src/: main.rs
hls-stream-segmenter/: README.md
in-memory-kv-store/: README.md
jpeg-thumbnail-pipeline/: README.md
json-transform-pipeline/: README.md
lightweight-api-gateway/: README.md
local-asr-llm-proxy/: README.md
log-aggregator-sidecar/: README.md
log-aggregator-sidecar/rust/: Cargo.toml  Dockerfile
log-aggregator-sidecar/rust/src/: main.rs
parquet-file-reader/: README.md
perceptual-hash-phash/: README.md
png-encoder-from-scratch/: README.md
quic-ping-client/: README.md
realtime-audio-chunker/: README.md
sheets-to-db-sync/: README.md
small-bytecode-vm/: README.md
sqlite-query-engine/: README.md
subtitle-burn-in-engine/: README.md
tcp-port-scanner/: README.md
tiny-health-check-agent/: README.md
vector-db-ingester/: README.md
video-frame-extractor/: README.md
web-accessibility-crawler/: README.md
websocket-public-chat/profile-a/rust/: Cargo.toml  Dockerfile
websocket-public-chat/profile-a/rust/src/: client.rs  hub.rs  main.rs  stats.rs
(+451 files in other folders)
