[package]
name = "high-perf-reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "server", "tokio"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
