[package]
name = "websocket-public-chat-profile-a"
version = "0.1.0"
edition = "2021"

[dependencies]
axum        = { version = "0.7", features = ["ws"] }
tokio       = { version = "1", features = ["full"] }
futures-util = "0.3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4"] }
clap        = { version = "4", features = ["derive"] }
